--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-requests==2.25.0
+requests==2.25.1
 schedule==0.6.0
-telebot~=0.0.3
+telebot==0.0.4
 pyTelegramBotApi==3.7.4
-Django~=3.1.4
+Django==3.1.4
