--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 requests==2.25.1
 schedule==0.6.0
-telebot==0.0.4
 pyTelegramBotApi==3.7.6
-Django==3.1.4
+Django>=3.2.2
 apscheduler==3.7.0
 pytz==2020.4
